tests/evaluator/should_fail/non_rect_2.csp
datatype Z = A.{0,1}.{0,1}
datatype Y = X.{A.0.1, A.1.0}

test1 = card({X.A.0.0}) == 1
